@@ -35,11 +35,11 @@ plugins {
 }
 
 group = "de.tum.in.www1.artemis"
-version = "4.4.6"
+version = "4.5.0"
 description = "Interactive Learning with Individual Feedback"
 
-sourceCompatibility=14
-targetCompatibility=14
+sourceCompatibility=15
+targetCompatibility=15
 
 apply plugin: "com.github.ben-manes.versions"
 
@@ -80,7 +80,7 @@ spotless {
         importOrderFile "artemis-spotless.importorder"
         eclipse().configFile "artemis-spotless-style.xml"
 
-        // the following command is not compatible with Java14 switch expressions
+        // the following command is not compatible with Java switch expressions
 //        removeUnusedImports()
     }
 }
@@ -91,14 +91,9 @@ springBoot {
     mainClassName = "de.tum.in.www1.artemis.ArtemisApp"
 }
 
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.add('--enable-preview')
-}
-
 // Execute the test cases: ./gradlew executeTests
 
 test {
-    jvmArgs(['--enable-preview'])
     useJUnitPlatform()
     exclude "**/*IT*", "**/*IntTest*", "**/*CucumberIT*"
     testLogging.showStandardStreams = true
@@ -110,7 +105,6 @@ test {
 }
 
 task integrationTest(type: Test) {
-    jvmArgs(['--enable-preview'])
     description = "Execute integration tests."
     group = "verification"
     include "**/*IT*", "**/*IntTest*"
@@ -134,6 +128,10 @@ task testReport(type: TestReport) {
 task integrationTestReport(type: TestReport) {
     destinationDir = file("$buildDir/reports/tests")
     reportOn integrationTest
+}
+
+jacoco {
+    toolVersion = "0.8.6"
 }
 
 jacocoTestReport {
@@ -263,7 +261,7 @@ dependencies {
     implementation "org.zalando:problem-spring-web:0.25.2"
     implementation "com.ibm.icu:icu4j:67.1"
     implementation 'com.github.seancfoley:ipaddress:5.3.1'
-    compile group: 'info.debatty', name: 'java-string-similarity', version: '2.0.0'
+    implementation 'info.debatty:java-string-similarity:2.0.0'
 
     annotationProcessor "org.mapstruct:mapstruct-processor:${mapstruct_version}"
     annotationProcessor "org.hibernate:hibernate-jpamodelgen:${hibernate_version}"
